@@ -26,7 +26,7 @@ class contextmenu extends rcube_plugin
 
 	public function messagecount()
 	{
-		$mbox = rcube_ui::get_input_value('_mbox', rcube_ui::INPUT_GET);
+		$mbox = rcube_utils::get_input_value('_mbox', rcube_utils::INPUT_GET);
 		$this->api->output->set_env('messagecount', rcube::get_instance()->storage->count($mbox));
 		$this->api->output->send();
 	}
@@ -34,9 +34,9 @@ class contextmenu extends rcube_plugin
 	public function readfolder()
 	{
 		$storage = rcube::get_instance()->storage;
-		$cbox = rcube_ui::get_input_value('_cur', rcube_ui::INPUT_GET);
-		$mbox = rcube_ui::get_input_value('_mbox', rcube_ui::INPUT_GET);
-		$oact = rcube_ui::get_input_value('_oact', rcube_ui::INPUT_GET);
+		$cbox = rcube_utils::get_input_value('_cur', rcube_utils::INPUT_GET);
+		$mbox = rcube_utils::get_input_value('_mbox', rcube_utils::INPUT_GET);
+		$oact = rcube_utils::get_input_value('_oact', rcube_utils::INPUT_GET);
 
 		$uids = $storage->search_once($mbox, 'ALL UNSEEN', true);
 
@@ -71,38 +71,38 @@ class contextmenu extends rcube_plugin
 		if ($rcmail->action == '') {
 			$li = '';
 
-			$li .= html::tag('li', array('class' => 'conmentitle'), html::span(null, rcube_ui::Q($this->gettext('markmessages'))));
-			$li .= html::tag('li', array('class' => 'markmessage read'), html::a(array('href' => "#read", 'class' => 'active'), html::span(null, rcube_ui::Q($this->gettext('markread')))));
-			$li .= html::tag('li', array('class' => 'markmessage unread'), html::a(array('href' => "#unread", 'class' => 'active'), html::span(null, rcube_ui::Q($this->gettext('markunread')))));
-			$li .= html::tag('li', array('class' => 'markmessage flagged'), html::a(array('href' => "#flagged", 'class' => 'active'), html::span(null, rcube_ui::Q($this->gettext('markflagged')))));
-			$li .= html::tag('li', array('class' => 'markmessage unflagged separator_below'), html::a(array('href' => "#unflagged", 'class' => 'active'), html::span(null, rcube_ui::Q($this->gettext('markunflagged')))));
-			$li .= html::tag('li', array('class' => 'reply'), html::a(array('href' => "#reply", 'class' => 'active'), html::span(null, rcube_ui::Q($this->gettext('replytomessage')))));
+			$li .= html::tag('li', array('class' => 'conmentitle'), html::span(null, rcmail::Q($this->gettext('markmessages'))));
+			$li .= html::tag('li', array('class' => 'markmessage read'), html::a(array('href' => "#read", 'class' => 'active'), html::span(null, rcmail::Q($this->gettext('markread')))));
+			$li .= html::tag('li', array('class' => 'markmessage unread'), html::a(array('href' => "#unread", 'class' => 'active'), html::span(null, rcmail::Q($this->gettext('markunread')))));
+			$li .= html::tag('li', array('class' => 'markmessage flagged'), html::a(array('href' => "#flagged", 'class' => 'active'), html::span(null, rcmail::Q($this->gettext('markflagged')))));
+			$li .= html::tag('li', array('class' => 'markmessage unflagged separator_below'), html::a(array('href' => "#unflagged", 'class' => 'active'), html::span(null, rcmail::Q($this->gettext('markunflagged')))));
+			$li .= html::tag('li', array('class' => 'reply'), html::a(array('href' => "#reply", 'class' => 'active'), html::span(null, rcmail::Q($this->gettext('replytomessage')))));
 
 			$lis = '';
-			$lis .= html::tag('li', array('class' => 'replyall'), html::a(array('href' => "#reply-all", 'class' => 'active'), html::span(null, rcube_ui::Q($this->gettext('replytoallmessage')))));
-			$lis .= html::tag('li', array('class' => 'replylist'), html::a(array('href' => "#reply-list", 'class' => 'active'), html::span(null, rcube_ui::Q($this->gettext('replylist')))));
-			$li .= html::tag('li', array('class' => 'submenu replyacts'), html::span(null, rcube_ui::Q($this->gettext('reply'))) . html::tag('ul', array('class' => 'popupmenu toolbarmenu replyacts'), $lis));
+			$lis .= html::tag('li', array('class' => 'replyall'), html::a(array('href' => "#reply-all", 'class' => 'active'), html::span(null, rcmail::Q($this->gettext('replytoallmessage')))));
+			$lis .= html::tag('li', array('class' => 'replylist'), html::a(array('href' => "#reply-list", 'class' => 'active'), html::span(null, rcmail::Q($this->gettext('replylist')))));
+			$li .= html::tag('li', array('class' => 'submenu replyacts'), html::span(null, rcmail::Q($this->gettext('reply'))) . html::tag('ul', array('class' => 'popupmenu toolbarmenu replyacts'), $lis));
 
 			$lis = '';
-			$lis .= html::tag('li', array('class' => 'forward'), html::a(array('href' => "#forward", 'class' => 'active'), html::span(null, rcube_ui::Q($this->gettext('forwardinline')))));
-			$lis .= html::tag('li', array('class' => 'forwardattachment'), html::a(array('href' => "#forward-attachment", 'class' => 'active'), html::span(null, rcube_ui::Q($this->gettext('forwardattachment')))));
-			$li .= html::tag('li', array('class' => 'submenu forwardacts'), html::span(null, rcube_ui::Q($this->gettext('forward'))) . html::tag('ul', array('class' => 'popupmenu toolbarmenu forwardacts'), $lis));
+			$lis .= html::tag('li', array('class' => 'forward'), html::a(array('href' => "#forward", 'class' => 'active'), html::span(null, rcmail::Q($this->gettext('forwardinline')))));
+			$lis .= html::tag('li', array('class' => 'forwardattachment'), html::a(array('href' => "#forward-attachment", 'class' => 'active'), html::span(null, rcmail::Q($this->gettext('forwardattachment')))));
+			$li .= html::tag('li', array('class' => 'submenu forwardacts'), html::span(null, rcmail::Q($this->gettext('forward'))) . html::tag('ul', array('class' => 'popupmenu toolbarmenu forwardacts'), $lis));
 
 			//$rcmail = rcmail::get_instance();
 			//if (!$rcmail->config->get('flag_for_deletion', false) && $rcmail->config->get('trash_mbox') && $_SESSION['mbox'] != $rcmail->config->get('trash_mbox'))
-			//	$li .= html::tag('li', array('class' => 'delete separator_below'), html::a(array('href' => "#delete", 'id' => 'rcm_delete', 'class' => 'active'), html::span(null, rcube_ui::Q($this->gettext('movemessagetotrash')))));
+			//	$li .= html::tag('li', array('class' => 'delete separator_below'), html::a(array('href' => "#delete", 'id' => 'rcm_delete', 'class' => 'active'), html::span(null, rcmail::Q($this->gettext('movemessagetotrash')))));
 			//else
-				$li .= html::tag('li', array('class' => 'delete separator_below'), html::a(array('href' => "#delete", 'id' => 'rcm_delete', 'class' => 'active'), html::span(null, rcube_ui::Q($this->gettext('deletemessage')))));
+				$li .= html::tag('li', array('class' => 'delete separator_below'), html::a(array('href' => "#delete", 'id' => 'rcm_delete', 'class' => 'active'), html::span(null, rcmail::Q($this->gettext('deletemessage')))));
 
-			$li .= html::tag('li', array('class' => 'submenu moveto'), html::span(null, rcube_ui::Q($this->gettext('moveto'))) . $this->_gen_folder_list($args['list'], '#moveto'));
+			$li .= html::tag('li', array('class' => 'submenu moveto'), html::span(null, rcmail::Q($this->gettext('moveto'))) . $this->_gen_folder_list($args['list'], '#moveto'));
 
 			$lis = '';
-			$lis .= html::tag('li', array('class' => 'print'), html::a(array('href' => "#print", 'class' => 'active'), html::span(null, rcube_ui::Q($this->gettext('printmessage')))));
-			$lis .= html::tag('li', array('class' => 'save'), html::a(array('href' => "#download", 'class' => 'active'), html::span(null, rcube_ui::Q($this->gettext('emlsave')))));
-			$lis .= html::tag('li', array('class' => 'edit'), html::a(array('href' => "#edit", 'class' => 'active'), html::span(null, rcube_ui::Q($this->gettext('editasnew')))));
-			$lis .= html::tag('li', array('class' => 'source separator_below'), html::a(array('href' => "#viewsource", 'class' => 'active'), html::span(null, rcube_ui::Q($this->gettext('viewsource')))));
-			$lis .= html::tag('li', array('class' => 'open'), html::a(array('href' => "#open", 'id' => 'rcm_open', 'class' => 'active'), html::span(null, rcube_ui::Q($this->gettext('openinextwin')))));
-			$li .= html::tag('li', array('class' => 'submenu moreacts'), html::span(null, rcube_ui::Q($this->gettext('moreactions'))) . html::tag('ul', array('class' => 'popupmenu toolbarmenu moreacts'), $lis));
+			$lis .= html::tag('li', array('class' => 'print'), html::a(array('href' => "#print", 'class' => 'active'), html::span(null, rcmail::Q($this->gettext('printmessage')))));
+			$lis .= html::tag('li', array('class' => 'save'), html::a(array('href' => "#download", 'class' => 'active'), html::span(null, rcmail::Q($this->gettext('emlsave')))));
+			$lis .= html::tag('li', array('class' => 'edit'), html::a(array('href' => "#edit", 'class' => 'active'), html::span(null, rcmail::Q($this->gettext('editasnew')))));
+			$lis .= html::tag('li', array('class' => 'source separator_below'), html::a(array('href' => "#viewsource", 'class' => 'active'), html::span(null, rcmail::Q($this->gettext('viewsource')))));
+			$lis .= html::tag('li', array('class' => 'open'), html::a(array('href' => "#open", 'id' => 'rcm_open', 'class' => 'active'), html::span(null, rcmail::Q($this->gettext('openinextwin')))));
+			$li .= html::tag('li', array('class' => 'submenu moreacts'), html::span(null, rcmail::Q($this->gettext('moreactions'))) . html::tag('ul', array('class' => 'popupmenu toolbarmenu moreacts'), $lis));
 
 			$out .= html::tag('ul', array('id' => 'rcmContextMenu', 'class' => 'popupmenu toolbarmenu'), $li);
 		}
@@ -110,15 +110,15 @@ class contextmenu extends rcube_plugin
 		// folder list menu
 		$li = '';
 
-		$li .= html::tag('li', array('class' => 'readfolder separator_below'), html::a(array('href' => "#readfolder", 'class' => 'active'), html::span(null, rcube_ui::Q($this->gettext('markreadfolder')))));
+		$li .= html::tag('li', array('class' => 'readfolder separator_below'), html::a(array('href' => "#readfolder", 'class' => 'active'), html::span(null, rcmail::Q($this->gettext('markreadfolder')))));
 
-		$li .= html::tag('li', array('class' => 'expunge'), html::a(array('href' => "#expunge", 'class' => 'active'), html::span(null, rcube_ui::Q($this->gettext('compact')))));
-		$li .= html::tag('li', array('class' => 'purge separator_below'), html::a(array('href' => "#purge", 'class' => 'active'), html::span(null, rcube_ui::Q($this->gettext('empty')))));
+		$li .= html::tag('li', array('class' => 'expunge'), html::a(array('href' => "#expunge", 'class' => 'active'), html::span(null, rcmail::Q($this->gettext('compact')))));
+		$li .= html::tag('li', array('class' => 'purge separator_below'), html::a(array('href' => "#purge", 'class' => 'active'), html::span(null, rcmail::Q($this->gettext('empty')))));
 
-		$li .= html::tag('li', array('class' => 'collapseall'), html::a(array('href' => "#collapseall", 'class' => 'active'), html::span(null, rcube_ui::Q($this->gettext('collapseall')))));
-		$li .= html::tag('li', array('class' => 'expandall separator_below'), html::a(array('href' => "#expandall", 'class' => 'active'), html::span(null, rcube_ui::Q($this->gettext('expandall')))));
+		$li .= html::tag('li', array('class' => 'collapseall'), html::a(array('href' => "#collapseall", 'class' => 'active'), html::span(null, rcmail::Q($this->gettext('collapseall')))));
+		$li .= html::tag('li', array('class' => 'expandall separator_below'), html::a(array('href' => "#expandall", 'class' => 'active'), html::span(null, rcmail::Q($this->gettext('expandall')))));
 
-		$li .= html::tag('li', array('class' => 'openfolder'), html::a(array('href' => "#openfolder", 'id' => 'rcm_openfolder', 'class' => 'active'), html::span(null, rcube_ui::Q($this->gettext('openinextwin')))));
+		$li .= html::tag('li', array('class' => 'openfolder'), html::a(array('href' => "#openfolder", 'id' => 'rcm_openfolder', 'class' => 'active'), html::span(null, rcmail::Q($this->gettext('openinextwin')))));
 
 		$out .= html::tag('ul', array('id' => 'rcmFolderMenu', 'class' => 'popupmenu toolbarmenu'), $li);
 
@@ -141,29 +141,29 @@ class contextmenu extends rcube_plugin
 		// contact list menu
 		$li = '';
 
-		$li .= html::tag('li', array('class' => 'composeto separator_below'), html::a(array('href' => "#compose", 'class' => 'active'), html::span(null, rcube_ui::Q($this->gettext('composeto')))));
+		$li .= html::tag('li', array('class' => 'composeto separator_below'), html::a(array('href' => "#compose", 'class' => 'active'), html::span(null, rcmail::Q($this->gettext('composeto')))));
 
-		$li .= html::tag('li', array('class' => 'editcontact'), html::a(array('href' => "#edit", 'class' => 'active'), html::span(null, rcube_ui::Q($this->gettext('editcontact')))));
-		$li .= html::tag('li', array('class' => 'deletecontact'), html::a(array('href' => "#delete", 'class' => 'active'), html::span(null, rcube_ui::Q($this->gettext('deletecontact')))));
+		$li .= html::tag('li', array('class' => 'editcontact'), html::a(array('href' => "#edit", 'class' => 'active'), html::span(null, rcmail::Q($this->gettext('editcontact')))));
+		$li .= html::tag('li', array('class' => 'deletecontact'), html::a(array('href' => "#delete", 'class' => 'active'), html::span(null, rcmail::Q($this->gettext('deletecontact')))));
 
 		if ($lis = $this->_gen_addressbooks_list($args['sources'], '#moveto'))
-			$li .= html::tag('li', array('class' => 'submenu separator_above'), html::span(null, rcube_ui::Q($this->gettext('copyto'))) . $lis);
+			$li .= html::tag('li', array('class' => 'submenu separator_above'), html::span(null, rcmail::Q($this->gettext('copyto'))) . $lis);
 
 		$out .= html::tag('ul', array('id' => 'rcmAddressMenu', 'class' => 'popupmenu toolbarmenu'), $li);
 
 		// contact group menu
 		$li = '';
 
-		$li .= html::tag('li', array('class' => 'groupcreate'), html::a(array('href' => "#group-create", 'class' => 'active'), html::span(null, rcube_ui::Q($this->gettext('newcontactgroup')))));
-		$li .= html::tag('li', array('class' => 'grouprename'), html::a(array('href' => "#group-rename", 'class' => 'active'), html::span(null, rcube_ui::Q($this->gettext('grouprename')))));
-		$li .= html::tag('li', array('class' => 'groupdelete'), html::a(array('href' => "#group-delete", 'class' => 'active'), html::span(null, rcube_ui::Q($this->gettext('groupdelete')))));
+		$li .= html::tag('li', array('class' => 'groupcreate'), html::a(array('href' => "#group-create", 'class' => 'active'), html::span(null, rcmail::Q($this->gettext('newcontactgroup')))));
+		$li .= html::tag('li', array('class' => 'grouprename'), html::a(array('href' => "#group-rename", 'class' => 'active'), html::span(null, rcmail::Q($this->gettext('grouprename')))));
+		$li .= html::tag('li', array('class' => 'groupdelete'), html::a(array('href' => "#group-delete", 'class' => 'active'), html::span(null, rcmail::Q($this->gettext('groupdelete')))));
 
 		$out .= html::tag('ul', array('id' => 'rcmGroupMenu', 'class' => 'popupmenu toolbarmenu'), $li);
 
 		$this->api->output->add_footer(html::div(null , $out));
 	}
 
-	// based on rcube_ui::render_folder_tree_html()
+	// based on rcube_utils::render_folder_tree_html()
 	private function _gen_folder_list($arrFolders, $command, $nestLevel = 0, &$folderTotal = 0)
 	{
 		$rcmail = rcube::get_instance();
@@ -175,7 +175,7 @@ class contextmenu extends rcube_plugin
 		foreach ($arrFolders as $key => $folder) {
 			$title = null;
 
-			if (($folder_class = rcube_ui::folder_classname($folder['id'])) && !$realnames) {
+			if (($folder_class = $rcmail->folder_classname($folder['id'])) && !$realnames) {
 				$foldername = $rcmail->gettext($folder_class);
 			}
 			else {
@@ -216,7 +216,7 @@ class contextmenu extends rcube_plugin
 			if ($nestLevel > 0)
 				$classes[] = 'subfolder';
 
-			$out .= html::tag('li', array('class' => join(' ', $classes)), html::a(array('href' => $command, 'onclick' => "rcm_set_dest_folder('". rcube_ui::JQ($folder['id']) ."')", 'class' => 'active', 'title' => $title), html::span(null, str_repeat('&nbsp;&nbsp;', $nestLevel) . rcube_ui::Q($foldername))));
+			$out .= html::tag('li', array('class' => join(' ', $classes)), html::a(array('href' => $command, 'onclick' => "rcm_set_dest_folder('". rcmail::JQ($folder['id']) ."')", 'class' => 'active', 'title' => $title), html::span(null, str_repeat('&nbsp;&nbsp;', $nestLevel) . rcmail::Q($foldername))));
 
 			if (!empty($folder['folders']))
 				$out .= $this->_gen_folder_list($folder['folders'], $command, $nestLevel+1, $folderTotal);
@@ -251,7 +251,7 @@ class contextmenu extends rcube_plugin
 		foreach ($arrBooks as $j => $source) {
 			$title = null;
 			$id = $source['id'] ? $source['id'] : $j;
-			$bookname = !empty($source['name']) ? rcube_ui::Q($source['name']) : rcube_ui::Q($id);
+			$bookname = !empty($source['name']) ? rcmail::Q($source['name']) : rcmail::Q($id);
 
 			// shorten the address book name to a given length
 			if ($maxlength && $maxlength > 1) {
@@ -264,17 +264,17 @@ class contextmenu extends rcube_plugin
 			}
 
 			if ($source['readonly'])
-				$out .= html::tag('li', array('id' => 'rcm_contextaddr_' . $id, 'class' => 'addressbook disabled'), html::a(array('href' => $command, 'id' => 'rcm_contextgrps_'. rcube_ui::JQ($id), 'onclick' => "rcm_set_dest_book('" . rcube_ui::JQ($id) ."', '" . rcube_ui::JQ($id) ."', null)", 'class' => 'active', 'title' => $title), html::span(null, rcube_ui::Q($bookname))));
+				$out .= html::tag('li', array('id' => 'rcm_contextaddr_' . $id, 'class' => 'addressbook disabled'), html::a(array('href' => $command, 'id' => 'rcm_contextgrps_'. rcmail::JQ($id), 'onclick' => "rcm_set_dest_book('" . rcmail::JQ($id) ."', '" . rcmail::JQ($id) ."', null)", 'class' => 'active', 'title' => $title), html::span(null, rcmail::Q($bookname))));
 			else
-				$out .= html::tag('li', array('id' => 'rcm_contextaddr_' . $id, 'class' => 'addressbook'), html::a(array('href' => $command, 'id' => 'rcm_contextgrps_'. rcube_ui::JQ($id), 'onclick' => "rcm_set_dest_book('" . rcube_ui::JQ($id) ."', '" . rcube_ui::JQ($id) ."', null)", 'class' => 'active', 'title' => $title), html::span(null, rcube_ui::Q($bookname))));
+				$out .= html::tag('li', array('id' => 'rcm_contextaddr_' . $id, 'class' => 'addressbook'), html::a(array('href' => $command, 'id' => 'rcm_contextgrps_'. rcmail::JQ($id), 'onclick' => "rcm_set_dest_book('" . rcmail::JQ($id) ."', '" . rcmail::JQ($id) ."', null)", 'class' => 'active', 'title' => $title), html::span(null, rcmail::Q($bookname))));
 
 			// contact groups
 			if ($source['groups']) {
 				$groups = $rcmail->get_address_book($source['id'])->list_groups();
 				foreach ($groups as $group) {
 					$title = null;
-					$gid = 'G' . rcube_ui::html_identifier($id . $group['ID']);
-					$groupname = !empty($group['name']) ? rcube_ui::Q($group['name']) : rcube_ui::Q($gid);
+					$gid = 'G' . rcube_utils::html_identifier($id . $group['ID']);
+					$groupname = !empty($group['name']) ? rcmail::Q($group['name']) : rcmail::Q($gid);
 
 					// shorten the address book name to a given length
 					if ($maxlength_grp && $maxlength_grp > 1) {
@@ -287,9 +287,9 @@ class contextmenu extends rcube_plugin
 					}
 
 					if ($source['readonly'])
-						$out .= html::tag('li', array('class' => 'contactgroup disabled'), html::a(array('href' => $command, 'id' => 'rcm_contextgrps_'. rcube_ui::JQ($gid), 'onclick' => "rcm_set_dest_book('" . rcube_ui::JQ($gid) . "', '" . rcube_ui::JQ($id) . "', '" . rcube_ui::JQ($group['ID']) ."')", 'class' => 'active', 'title' => $title), html::span(null, rcube_ui::Q($groupname))));
+						$out .= html::tag('li', array('class' => 'contactgroup disabled'), html::a(array('href' => $command, 'id' => 'rcm_contextgrps_'. rcmail::JQ($gid), 'onclick' => "rcm_set_dest_book('" . rcmail::JQ($gid) . "', '" . rcmail::JQ($id) . "', '" . rcmail::JQ($group['ID']) ."')", 'class' => 'active', 'title' => $title), html::span(null, rcmail::Q($groupname))));
 					else
-						$out .= html::tag('li', array('class' => 'contactgroup'), html::a(array('href' => $command, 'id' => 'rcm_contextgrps_'. rcube_ui::JQ($gid), 'onclick' => "rcm_set_dest_book('" . rcube_ui::JQ($gid) . "', '" . rcube_ui::JQ($id) . "', '" . rcube_ui::JQ($group['ID']) ."')", 'class' => 'active', 'title' => $title), html::span(null, rcube_ui::Q($groupname))));
+						$out .= html::tag('li', array('class' => 'contactgroup'), html::a(array('href' => $command, 'id' => 'rcm_contextgrps_'. rcmail::JQ($gid), 'onclick' => "rcm_set_dest_book('" . rcmail::JQ($gid) . "', '" . rcmail::JQ($id) . "', '" . rcmail::JQ($group['ID']) ."')", 'class' => 'active', 'title' => $title), html::span(null, rcmail::Q($groupname))));
 
 					$groupTotal++;
 				}
